--- a/Dockerfile.agnos
+++ b/Dockerfile.agnos
@@ -1,224 +1,225 @@
 # ################## #
 # ###### Base ###### #
 # ################## #
-FROM scratch AS agnos-base
-ADD ubuntu-base-20.04.1-base-arm64.tar.gz /
-Run apt-get clean
-RUN apt-get autoremove && df -h
-# Add aarch64 and arm support
-COPY --from=multiarch/qemu-user-static:x86_64-aarch64 /usr/bin/qemu-aarch64-static /usr/bin
-COPY --from=multiarch/qemu-user-static:x86_64-arm /usr/bin/qemu-arm-static /usr/bin
+RUN docker system prune -af
+RUN df -h 
 
-# Build folder
-RUN mkdir -p /tmp/agnos
+# FROM scratch AS agnos-base
+# ADD ubuntu-base-20.04.1-base-arm64.tar.gz /
+# # Add aarch64 and arm support
+# COPY --from=multiarch/qemu-user-static:x86_64-aarch64 /usr/bin/qemu-aarch64-static /usr/bin
+# COPY --from=multiarch/qemu-user-static:x86_64-arm /usr/bin/qemu-arm-static /usr/bin
 
-# Stop on error
-RUN set -xe
+# # Build folder
+# RUN mkdir -p /tmp/agnos
 
-ENV USERNAME=comma
-ENV PASSWD=comma
-ENV HOST=comma
+# # Stop on error
+# RUN set -xe
 
-# Base system setup
-RUN echo "resolvconf resolvconf/linkify-resolvconf boolean false" | debconf-set-selections
-COPY ./userspace/base_setup.sh /tmp/agnos
-RUN /tmp/agnos/base_setup.sh
+# ENV USERNAME=comma
+# ENV PASSWD=comma
+# ENV HOST=comma
 
-# ################## #
-# #### Compiler #### #
-# ################## #
-FROM agnos-base AS agnos-compiler
+# # Base system setup
+# RUN echo "resolvconf resolvconf/linkify-resolvconf boolean false" | debconf-set-selections
+# COPY ./userspace/base_setup.sh /tmp/agnos
+# RUN /tmp/agnos/base_setup.sh
 
-RUN apt-get update && apt-get install --no-install-recommends checkinstall
-# Install openpilot dependencies, probably needed for build,
-# but we don't want these in the base image
-COPY ./userspace/openpilot_dependencies.sh /tmp/agnos/
-RUN /tmp/agnos/openpilot_dependencies.sh
+# # ################## #
+# # #### Compiler #### #
+# # ################## #
+# FROM agnos-base AS agnos-compiler
 
-# Individual compiling images
-FROM agnos-compiler AS agnos-compiler-capnp
-COPY ./userspace/compile-capnp.sh /tmp/agnos/
-RUN /tmp/agnos/compile-capnp.sh
+# RUN apt-get update && apt-get install --no-install-recommends checkinstall
+# # Install openpilot dependencies, probably needed for build,
+# # but we don't want these in the base image
+# COPY ./userspace/openpilot_dependencies.sh /tmp/agnos/
+# RUN /tmp/agnos/openpilot_dependencies.sh
 
-FROM agnos-compiler AS agnos-compiler-ffmpeg
-COPY ./userspace/compile-ffmpeg.sh /tmp/agnos/
-RUN /tmp/agnos/compile-ffmpeg.sh
+# # Individual compiling images
+# FROM agnos-compiler AS agnos-compiler-capnp
+# COPY ./userspace/compile-capnp.sh /tmp/agnos/
+# RUN /tmp/agnos/compile-capnp.sh
 
-FROM agnos-compiler AS agnos-compiler-qtwayland5
-COPY ./userspace/compile-qtwayland5.sh /tmp/agnos/
-COPY ./userspace/qtwayland/patch /tmp/agnos/
-RUN /tmp/agnos/compile-qtwayland5.sh
+# FROM agnos-compiler AS agnos-compiler-ffmpeg
+# COPY ./userspace/compile-ffmpeg.sh /tmp/agnos/
+# RUN /tmp/agnos/compile-ffmpeg.sh
 
-# ################### #
-# ###### AGNOS ###### #
-# ################### #
-FROM agnos-base
+# FROM agnos-compiler AS agnos-compiler-qtwayland5
+# COPY ./userspace/compile-qtwayland5.sh /tmp/agnos/
+# COPY ./userspace/qtwayland/patch /tmp/agnos/
+# RUN /tmp/agnos/compile-qtwayland5.sh
 
-# Hardware setup
-RUN mkdir -p /tmp/agnos/debs
-COPY ./userspace/debs /tmp/agnos/debs
-COPY ./userspace/hardware_setup.sh /tmp/agnos
-RUN /tmp/agnos/hardware_setup.sh
-RUN mv /data/persist /system/ && rm -rf /data/*
+# # ################### #
+# # ###### AGNOS ###### #
+# # ################### #
+# FROM agnos-base
 
-# Build ModemManager
-COPY ./userspace/compile-modemmanager.sh /tmp/agnos/
-RUN /tmp/agnos/compile-modemmanager.sh
+# # Hardware setup
+# RUN mkdir -p /tmp/agnos/debs
+# COPY ./userspace/debs /tmp/agnos/debs
+# COPY ./userspace/hardware_setup.sh /tmp/agnos
+# RUN /tmp/agnos/hardware_setup.sh
+# RUN mv /data/persist /system/ && rm -rf /data/*
 
-# Pre-compiled capnp (must be before python install)
-COPY --from=agnos-compiler-capnp /tmp/capnproto.deb /tmp/capnproto.deb
-RUN cd /tmp && apt-get -o Dpkg::Options::="--force-overwrite" install -yq ./capnproto.deb
+# # Build ModemManager
+# COPY ./userspace/compile-modemmanager.sh /tmp/agnos/
+# RUN /tmp/agnos/compile-modemmanager.sh
 
-# Install openpilot dependencies
-COPY ./userspace/openpilot_dependencies.sh /tmp/agnos/
-RUN /tmp/agnos/openpilot_dependencies.sh
-COPY ./userspace/openpilot_python_dependencies.sh /tmp/agnos/
-RUN /tmp/agnos/openpilot_python_dependencies.sh
+# # Pre-compiled capnp (must be before python install)
+# COPY --from=agnos-compiler-capnp /tmp/capnproto.deb /tmp/capnproto.deb
+# RUN cd /tmp && apt-get -o Dpkg::Options::="--force-overwrite" install -yq ./capnproto.deb
 
-# Use other pre-compiled packages
-COPY --from=agnos-compiler-ffmpeg /tmp/ffmpeg.deb /tmp/ffmpeg.deb
-RUN cd /tmp && apt-get -o Dpkg::Options::="--force-overwrite" install -yq ./ffmpeg.deb
+# # Install openpilot dependencies
+# COPY ./userspace/openpilot_dependencies.sh /tmp/agnos/
+# RUN /tmp/agnos/openpilot_dependencies.sh
+# COPY ./userspace/openpilot_python_dependencies.sh /tmp/agnos/
+# RUN /tmp/agnos/openpilot_python_dependencies.sh
 
-ENV XDG_DATA_HOME="/usr/local"
-ENV PATH="$XDG_DATA_HOME/.cargo/bin:$PATH"
+# # Use other pre-compiled packages
+# COPY --from=agnos-compiler-ffmpeg /tmp/ffmpeg.deb /tmp/ffmpeg.deb
+# RUN cd /tmp && apt-get -o Dpkg::Options::="--force-overwrite" install -yq ./ffmpeg.deb
 
-COPY ./userspace/files/PyQt5-5.15.9-cp38-abi3-manylinux_2_17_aarch64.whl /tmp/agnos/
-RUN export MAKEFLAGS="-j$(nproc)" && \
-    source $XDG_DATA_HOME/venv/bin/activate && \
-    uv pip install pyqt5-sip==12.12.1 && \
-    uv pip install /tmp/agnos/PyQt5-5.15.9-cp38-abi3-manylinux_2_17_aarch64.whl
+# ENV XDG_DATA_HOME="/usr/local"
+# ENV PATH="$XDG_DATA_HOME/.cargo/bin:$PATH"
 
-# Install openpilot python packages
-RUN mkdir -p /tmp/agnos/uv
-COPY ./userspace/pyproject.toml ./userspace/uv.lock /tmp/agnos/uv
-RUN source $XDG_DATA_HOME/venv/bin/activate && \
-    cd /tmp/agnos/uv && \
-    export PYOPENCL_CL_PRETEND_VERSION="2.0" && \    
-    pc="$(python -c "import sysconfig;print(sysconfig.get_config_vars('installed_base')[0])")" && \
-    pcpath=$pc"/lib/pkgconfig" && \
-    export PKG_CONFIG_PATH="$pcpath:$PKG_CONFIG_PATH" && \
-    pypcpath=$pcpath"/python-3.11.pc" && \
-    sed -i 's|prefix=/install|prefix='$pc'|' $pypcpath && \
-    pypcpathembed=$pcpath"/python-3.11-embed.pc" && \
-    sed -i 's|prefix=/install|prefix='$pc'|' $pypcpathembed && \
-    MAKEFLAGS="-j$(nproc)" UV_NO_CACHE=1 uv pip install --no-cache-dir . 
+# COPY ./userspace/files/PyQt5-5.15.9-cp38-abi3-manylinux_2_17_aarch64.whl /tmp/agnos/
+# RUN export MAKEFLAGS="-j$(nproc)" && \
+#     source $XDG_DATA_HOME/venv/bin/activate && \
+#     uv pip install pyqt5-sip==12.12.1 && \
+#     uv pip install /tmp/agnos/PyQt5-5.15.9-cp38-abi3-manylinux_2_17_aarch64.whl
 
-# Install nice to haves
-COPY ./userspace/install_extras.sh /tmp/agnos/
-RUN /tmp/agnos/install_extras.sh
+# # Install openpilot python packages
+# RUN mkdir -p /tmp/agnos/uv
+# COPY ./userspace/pyproject.toml ./userspace/uv.lock /tmp/agnos/uv
+# RUN source $XDG_DATA_HOME/venv/bin/activate && \
+#     cd /tmp/agnos/uv && \
+#     export PYOPENCL_CL_PRETEND_VERSION="2.0" && \    
+#     pc="$(python -c "import sysconfig;print(sysconfig.get_config_vars('installed_base')[0])")" && \
+#     pcpath=$pc"/lib/pkgconfig" && \
+#     export PKG_CONFIG_PATH="$pcpath:$PKG_CONFIG_PATH" && \
+#     pypcpath=$pcpath"/python-3.11.pc" && \
+#     sed -i 's|prefix=/install|prefix='$pc'|' $pypcpath && \
+#     pypcpathembed=$pcpath"/python-3.11-embed.pc" && \
+#     sed -i 's|prefix=/install|prefix='$pc'|' $pypcpathembed && \
+#     MAKEFLAGS="-j$(nproc)" UV_NO_CACHE=1 uv pip install --no-cache-dir . 
 
-# 16.04 libwayland-client + libffi6
-COPY ./userspace/qtwayland/libffi.so.6 /lib/aarch64-linux-gnu/
-COPY ./userspace/qtwayland/libwayland-client.so.0 /lib/aarch64-linux-gnu/libwayland-client.so.0
+# # Install nice to haves
+# COPY ./userspace/install_extras.sh /tmp/agnos/
+# RUN /tmp/agnos/install_extras.sh
 
-COPY --from=agnos-compiler-qtwayland5 /tmp/qtwayland5.deb /tmp/qtwayland5.deb
-RUN cd /tmp && apt-get -o Dpkg::Options::="--force-overwrite" install -yq --allow-downgrades ./qtwayland5.deb
+# # 16.04 libwayland-client + libffi6
+# COPY ./userspace/qtwayland/libffi.so.6 /lib/aarch64-linux-gnu/
+# COPY ./userspace/qtwayland/libwayland-client.so.0 /lib/aarch64-linux-gnu/libwayland-client.so.0
 
-# Patched libeglSubDriverWayland with fixed nullptr deref in CommitBuffer
-COPY ./userspace/files/libeglSubDriverWayland.so.patched /lib/aarch64-linux-gnu/libeglSubDriverWayland.so
+# COPY --from=agnos-compiler-qtwayland5 /tmp/qtwayland5.deb /tmp/qtwayland5.deb
+# RUN cd /tmp && apt-get -o Dpkg::Options::="--force-overwrite" install -yq --allow-downgrades ./qtwayland5.deb
 
-COPY ./userspace/home/ /home/$USERNAME/
-COPY ./userspace/home/.config/ /root/.config
-RUN chown -R $USERNAME: /home/$USERNAME/.config
+# # Patched libeglSubDriverWayland with fixed nullptr deref in CommitBuffer
+# COPY ./userspace/files/libeglSubDriverWayland.so.patched /lib/aarch64-linux-gnu/libeglSubDriverWayland.so
 
-# populate /lib
-COPY ./userspace/files/*.path /lib/systemd/system/
-COPY ./userspace/files/*.mount /lib/systemd/system/
-COPY ./userspace/files/*.service /lib/systemd/system/
-COPY ./userspace/files/*.timer /lib/systemd/system/
-COPY ./userspace/files/ssh_override.conf /lib/systemd/system/ssh.service.d/override.conf
-COPY ./userspace/firmware/* /lib/firmware/
+# COPY ./userspace/home/ /home/$USERNAME/
+# COPY ./userspace/home/.config/ /root/.config
+# RUN chown -R $USERNAME: /home/$USERNAME/.config
 
-# populate /etc
-COPY ./userspace/files/fstab /etc
-COPY ./userspace/files/profile /etc/profile
-COPY ./userspace/files/ethernet.yaml /etc/netplan/
-COPY ./userspace/files/allow-network-control.pkla /etc/polkit-1/localauthority/50-local.d/allow-network-control.pkla
-COPY ./userspace/files/allow-modem-control.pkla /etc/polkit-1/localauthority/50-local.d/allow-modem-control.pkla
-COPY ./userspace/files/*.rules /etc/udev/rules.d/
-COPY ./userspace/files/ssh*_config /etc/ssh/
-COPY ./userspace/files/logrotate.conf /etc/
-RUN chmod 644 /etc/logrotate.conf
+# # populate /lib
+# COPY ./userspace/files/*.path /lib/systemd/system/
+# COPY ./userspace/files/*.mount /lib/systemd/system/
+# COPY ./userspace/files/*.service /lib/systemd/system/
+# COPY ./userspace/files/*.timer /lib/systemd/system/
+# COPY ./userspace/files/ssh_override.conf /lib/systemd/system/ssh.service.d/override.conf
+# COPY ./userspace/firmware/* /lib/firmware/
 
-# populate /usr
-COPY ./userspace/usr/comma/ /usr/$USERNAME/
-COPY ./userspace/usr/share/fonts/* /usr/share/fonts/
-COPY ./userspace/libs/* /usr/lib/aarch64-linux-gnu/
-COPY ./userspace/libs32/* /usr/lib/arm-linux-gnueabihf/
+# # populate /etc
+# COPY ./userspace/files/fstab /etc
+# COPY ./userspace/files/profile /etc/profile
+# COPY ./userspace/files/ethernet.yaml /etc/netplan/
+# COPY ./userspace/files/allow-network-control.pkla /etc/polkit-1/localauthority/50-local.d/allow-network-control.pkla
+# COPY ./userspace/files/allow-modem-control.pkla /etc/polkit-1/localauthority/50-local.d/allow-modem-control.pkla
+# COPY ./userspace/files/*.rules /etc/udev/rules.d/
+# COPY ./userspace/files/ssh*_config /etc/ssh/
+# COPY ./userspace/files/logrotate.conf /etc/
+# RUN chmod 644 /etc/logrotate.conf
 
-# kernel headers for the AGNOS kernel (built on device)
-COPY ./userspace/files/linux-headers-4.9.103+_4.9.103+-1_arm64.deb /tmp/
-RUN dpkg -i /tmp/linux-headers-4.9.103+_4.9.103+-1_arm64.deb
+# # populate /usr
+# COPY ./userspace/usr/comma/ /usr/$USERNAME/
+# COPY ./userspace/usr/share/fonts/* /usr/share/fonts/
+# COPY ./userspace/libs/* /usr/lib/aarch64-linux-gnu/
+# COPY ./userspace/libs32/* /usr/lib/arm-linux-gnueabihf/
 
-# Weston with hacked touch rotate and color correction
-COPY ./userspace/files/weston /usr/bin/weston
-COPY ./userspace/files/gl-renderer.so /usr/lib/arm-linux-gnueabihf/weston
+# # kernel headers for the AGNOS kernel (built on device)
+# COPY ./userspace/files/linux-headers-4.9.103+_4.9.103+-1_arm64.deb /tmp/
+# RUN dpkg -i /tmp/linux-headers-4.9.103+_4.9.103+-1_arm64.deb
 
-# Setup systemd services
-COPY ./userspace/services.sh /tmp/agnos
-RUN /tmp/agnos/services.sh
+# # Weston with hacked touch rotate and color correction
+# COPY ./userspace/files/weston /usr/bin/weston
+# COPY ./userspace/files/gl-renderer.so /usr/lib/arm-linux-gnueabihf/weston
 
-# MOTD
-RUN rm -r /etc/update-motd.d/*
-COPY --chown=root:root ./userspace/motd/* /etc/update-motd.d/
+# # Setup systemd services
+# COPY ./userspace/services.sh /tmp/agnos
+# RUN /tmp/agnos/services.sh
 
-# Let NetworkManager manage eth0
-COPY ./userspace/files/10-globally-managed-devices.conf /etc/NetworkManager/conf.d/10-globally-managed-devices.conf
-COPY ./userspace/files/NetworkManager.conf /etc/NetworkManager/NetworkManager.conf
+# # MOTD
+# RUN rm -r /etc/update-motd.d/*
+# COPY --chown=root:root ./userspace/motd/* /etc/update-motd.d/
 
-# Add cellular connections
-COPY ./userspace/files/*.nmconnection /usr/lib/NetworkManager/system-connections/
-RUN chmod 600 /usr/lib/NetworkManager/system-connections/*.nmconnection
+# # Let NetworkManager manage eth0
+# COPY ./userspace/files/10-globally-managed-devices.conf /etc/NetworkManager/conf.d/10-globally-managed-devices.conf
+# COPY ./userspace/files/NetworkManager.conf /etc/NetworkManager/NetworkManager.conf
 
-# Prefer ipv4 over ipv6
-RUN echo "precedence ::ffff:0:0/96 100" >> /etc/gai.conf
+# # Add cellular connections
+# COPY ./userspace/files/*.nmconnection /usr/lib/NetworkManager/system-connections/
+# RUN chmod 600 /usr/lib/NetworkManager/system-connections/*.nmconnection
 
-# Don't let logind delete /dev/shm
-COPY ./userspace/files/logind.conf /etc/systemd/logind.conf
+# # Prefer ipv4 over ipv6
+# RUN echo "precedence ::ffff:0:0/96 100" >> /etc/gai.conf
 
-# Remove qt network bearer plugins
-RUN rm -rf /usr/lib/aarch64-linux-gnu/qt5/plugins/bearer
+# # Don't let logind delete /dev/shm
+# COPY ./userspace/files/logind.conf /etc/systemd/logind.conf
 
-# Add iptable rules to block incoming traffic on wwan0
-COPY ./userspace/etc/iptables/rules.v4 /etc/iptables/rules.v4
+# # Remove qt network bearer plugins
+# RUN rm -rf /usr/lib/aarch64-linux-gnu/qt5/plugins/bearer
 
-# Run ModemManager in debug mode to allow AT commands
-COPY ./userspace/files/ModemManager.service /lib/systemd/system/
-RUN systemctl enable ModemManager
+# # Add iptable rules to block incoming traffic on wwan0
+# COPY ./userspace/etc/iptables/rules.v4 /etc/iptables/rules.v4
 
-# Add more T-Mobile networks to mobile-broadband-provider-info (do we still need the package?)
-COPY ./userspace/files/serviceproviders.xml /usr/share/mobile-broadband-provider-info/serviceproviders.xml
+# # Run ModemManager in debug mode to allow AT commands
+# COPY ./userspace/files/ModemManager.service /lib/systemd/system/
+# RUN systemctl enable ModemManager
 
-# Setup hostname resolution for our custom hostname
-RUN sed -i 's/hosts:          files dns myhostname/hosts:          files myhostname dns/g' /etc/nsswitch.conf
+# # Add more T-Mobile networks to mobile-broadband-provider-info (do we still need the package?)
+# COPY ./userspace/files/serviceproviders.xml /usr/share/mobile-broadband-provider-info/serviceproviders.xml
 
-# TODO: move this to base_setup.sh or build gcc from source
-# Remove unused architectures from arm-none-eabi
-RUN cd /usr/lib/gcc/arm-none-eabi/9.2.1 && \
-    rm -rf arm/ && \
-    rm -rf thumb/nofp thumb/v6* thumb/v8* thumb/v7+fp thumb/v7-r+fp.sp
+# # Setup hostname resolution for our custom hostname
+# RUN sed -i 's/hosts:          files dns myhostname/hosts:          files myhostname dns/g' /etc/nsswitch.conf
 
-# keep this last
-RUN ldconfig
+# # TODO: move this to base_setup.sh or build gcc from source
+# # Remove unused architectures from arm-none-eabi
+# RUN cd /usr/lib/gcc/arm-none-eabi/9.2.1 && \
+#     rm -rf arm/ && \
+#     rm -rf thumb/nofp thumb/v6* thumb/v8* thumb/v7+fp thumb/v7-r+fp.sp
 
-# Setup RO rootfs
-RUN mkdir -p /tmptmp
-COPY ./userspace/files/comma.conf /usr/lib/tmpfiles.d/
-COPY ./userspace/readonly_setup.sh /tmptmp/readonly_setup.sh
-RUN /tmptmp/readonly_setup.sh && rm -rf /tmptmp
+# # keep this last
+# RUN ldconfig
 
-# copy at the end, after all apt usage
-COPY ./userspace/files/apt.conf /etc/apt/apt.conf
+# # Setup RO rootfs
+# RUN mkdir -p /tmptmp
+# COPY ./userspace/files/comma.conf /usr/lib/tmpfiles.d/
+# COPY ./userspace/readonly_setup.sh /tmptmp/readonly_setup.sh
+# RUN /tmptmp/readonly_setup.sh && rm -rf /tmptmp
 
-# Write version file
-RUN echo -n "10.1" > /VERSION
+# # copy at the end, after all apt usage
+# COPY ./userspace/files/apt.conf /etc/apt/apt.conf
 
-# ################## #
-# #### Cleaunup #### #
-# ################## #
+# # Write version file
+# RUN echo -n "10.1" > /VERSION
 
-RUN rm -rf /usr/share/icons/* && \
-    rm -rf /var/lib/apt/lists/* && \
-    rm -rf /home/$USERNAME/.cache && \
-    rm -rf /root/.cache && \
-    apt-get clean
+# # ################## #
+# # #### Cleaunup #### #
+# # ################## #
+
+# RUN rm -rf /usr/share/icons/* && \
+#     rm -rf /var/lib/apt/lists/* && \
+#     rm -rf /home/$USERNAME/.cache && \
+#     rm -rf /root/.cache && \
+#     apt-get clean
