--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,7 +17,7 @@ jobs:
   build:
     name: build kernel and system
     # runs-on: namespace-profile-arm64-8x16-2004-caching
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     timeout-minutes: 60
     steps:
     - name: Maximize build space
