--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,7 +17,7 @@ jobs:
   build:
     name: build kernel and system
     # runs-on: namespace-profile-arm64-8x16-2004-caching
-    runs-on: macos-13
+    runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:  
     - uses: actions/checkout@v4
